--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
       </div>
 
       <!-- Conteúdo textual do cabeçalho -->
-      <div class="header__content">
+      <div class="section__container skill__container">
         <p class="section__subheader">Bem-vindo</p> <!-- Subtítulo de boas-vindas -->
-        <h1>Estudante de <span>Programação</span> em busca de oportunidades</h1> <!-- Título principal com destaque em 'Creative Design' -->
+        <h1 class="section__header">Estudante de <span>Programação</span> em busca de oportunidades</h1> <!-- Título principal com destaque em 'Creative Design' -->
         <p class="section__description">
           Bem-vindo ao meu portfolio! Atualmente, sou estudante de Análise e Desenvolvimento de Sistemas (ADS), 
           onde estou adquirindo conhecimentos fundamentais em programação, banco de dados e desenvolvimento de software.
