--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <header class="section__container header__container" id="about">
       <!-- Imagem de destaque no cabeçalho -->
       <div class="header__image">
-        <img src="img/WhatsApp Image 2024-10-06 at 6.29.42 PM.jpeg" alt="header" />
+        <img src="img/Matheus.jpeg" alt="header" />
       </div>
 
       <!-- Conteúdo textual do cabeçalho -->
@@ -79,18 +79,18 @@
     <section class="section__container stats__container">
       <!-- Cartões de estatísticas -->
       <div class="stats__card">
-        <h4>HTML/CSS</h4> <!-- Número de clientes satisfeitos -->
-        <p>Intermediário</p>
+        <h4>HTML/CSS/JS</h4> <!-- Número de clientes satisfeitos -->
+        <p>Básico</p>
       </div>
       <div class="stats__divider"></div> <!-- Divisor entre os cartões -->
       <div class="stats__card">
-        <h4>JavaScript</h4> <!-- Número de projetos concluídos -->
-        <p>Intermediário</p>
+        <h4>C#/.NET</h4> <!-- Número de projetos concluídos -->
+        <p>Básico/Intermediário</p>
       </div>
       <div class="stats__divider"></div> <!-- Outro divisor -->
       <div class="stats__card">
-        <h4>C# e .NET</h4> <!-- Número de avaliações recebidas -->
-        <p>Basico/Intermediário</p>
+        <h4>QSL</h4> <!-- Número de avaliações recebidas -->
+        <p>Básico</p>
       </div>
     </section>
     <!-- Fim da seção de estatísticas -->
