--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
       <ul class="nav__links" id="nav-links">
         <li><a href="#about">Sobre mim</a></li> <!-- Link para seção 'About' -->
         <li><a href="#skill">Habilidades</a></li> <!-- Link para seção 'Skills' -->
-        <li><a href="assets/CV.pdf" download="math_curriculo">Baixar Currículo</a></li> <!-- Link para baixar o currículo -->
+        <li><a href="Matheus_Jesus.pdf" download="Matheus_Jesus.pdf">Baixar Currículo</a></li> <!-- Link para baixar o currículo -->
       </ul>
 
       <!-- Botão adicional de download do currículo -->
       <div class="nav__btn">
-        <a href="assets/CV.pdf" download="">Baixar Currículo</a> <!-- Baixa o arquivo PDF do currículo -->
+        <a href="Matheus_Jesus.pdf" download="Matheus_Jesus.pdf">Baixar Currículo</a> <!-- Baixa o arquivo PDF do currículo -->
       </div>
     </nav>
     <!-- Fim da navegação -->
