--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <!-- Cartões de estatísticas -->
       <div class="stats__card">
         <h4>HTML/CSS/JS</h4> <!-- Número de clientes satisfeitos -->
-        <p>Básico</p>
+        <p>Básico/Intermediário</p>
       </div>
       <div class="stats__divider"></div> <!-- Divisor entre os cartões -->
       <div class="stats__card">
@@ -89,7 +89,7 @@
       </div>
       <div class="stats__divider"></div> <!-- Outro divisor -->
       <div class="stats__card">
-        <h4>QSL</h4> <!-- Número de avaliações recebidas -->
+        <h4>SQL</h4> <!-- Número de avaliações recebidas -->
         <p>Básico</p>
       </div>
     </section>
@@ -141,7 +141,7 @@
 
     <!-- Início do rodapé -->
     <footer class="section__container footer__container">
-      <p>Copyright © 2024 Matheus De Jesus.</p>
+      <p>Copyright © 2025 Matheus De Jesus.</p>
       <!-- Links para redes sociais -->
       <ul class="footer__socials">
         <li>
