--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <!-- Cartões de estatísticas -->
       <div class="stats__card">
         <h4>HTML/CSS/JS</h4> <!-- Número de clientes satisfeitos -->
-        <p>Básico/Intermediário</p>
+        <p>Intermediário</p>
       </div>
       <div class="stats__divider"></div> <!-- Divisor entre os cartões -->
       <div class="stats__card">
@@ -119,7 +119,7 @@
           <span><i class="ri-pulse-line"></i></span> <!-- Ícone da habilidade -->
           <h4>Amante Tech</h4> <!-- Nome da habilidade -->
           <p>
-            Estudande apaixonado por tecnologia. <!-- Descrição da habilidade -->
+            Estudante apaixonado por tecnologia. <!-- Descrição da habilidade -->
           </p>
         </div>
         <div class="skill__card">
@@ -133,7 +133,7 @@
           <span><i class="ri-graduation-cap-line"></i></span> <!-- Ícone da terceira habilidade -->
           <h4>ADS</h4>
           <p>
-            Estudande do curso de Analise e Desenvolvimento de sistemas.
+            Estudante do curso de Analise e Desenvolvimento de sistemas.
         </div>
       </div>
     </section>
